@@ -1,4 +1,4 @@
-## for Java
+## for rJava
 
 .onLoad <- function(libname, pkgname) {
     options(java.parameters="-Xrs")  ### so sun java does not kill R on CTRL-C
